--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "psr/http-factory-implementation": "^1.0",
         "psr/http-message": "^1.0",
         "symfony/polyfill-php80": "^1.17",
-        "vlucas/phpdotenv": "^5.3"
+        "vlucas/phpdotenv": "^5.3",
+      "ext-http": "*"
     },
     "require-dev": {
         "symfony/cache": "^5.1.8",
